Prepared v2 (Java 11).