@@ -10,14 +10,15 @@
  */
 package ch.bfh.ti.daterange;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Date;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 /**
  * Tests for DateRange objects. The concrete DateRangeFactory can be specified
@@ -32,40 +33,40 @@ public class DateRangeTest {
 	 * <code>daterangefactory.name</code> property. If not set then the
 	 * <code>ch.bfh.ti.daterange.impl.pojo.DateRangeFactory</code> is used.
 	 */
-	@Before
-	public void setUp() throws Exception {
+	@BeforeEach
+	void setUp() throws Exception {
 		String className = System.getProperty("daterangefactory.name",
 				"ch.bfh.ti.daterange.impl.pojo.DateRangeFactory");
 		Class<?> clazz = Class.forName(className);
-		factory = (DateRangeFactory) clazz.newInstance();
+		factory = (DateRangeFactory) clazz.getDeclaredConstructor().newInstance();
 	}
 
 	/**
 	 * Tests the creation for start date is less than end date.
 	 */
 	@Test
-	public void testCreation1() {
-		factory.createDateRange(DateFactory.createDate(2006, 03, 28),
-				DateFactory.createDate(2006, 03, 29));
+	void testCreation1() {
+		factory.createDateRange(DateFactory.createDate(2006, 3, 28),
+				DateFactory.createDate(2006, 3, 29));
 	}
 
 	/**
 	 * Tests the creation for start date is equal to the end date.
 	 */
 	@Test
-	public void testCreation2() {
-		factory.createDateRange(DateFactory.createDate(2006, 03, 28),
-				DateFactory.createDate(2006, 03, 28));
+	void testCreation2() {
+		factory.createDateRange(DateFactory.createDate(2006, 3, 28),
+				DateFactory.createDate(2006, 3, 28));
 	}
 
 	/**
 	 * Tests the creation for start date is greater than the end date.
 	 */
 	@Test
-	public void testCreation3() {
+	void testCreation3() {
 		try {
-			factory.createDateRange(DateFactory.createDate(2006, 03, 28),
-					DateFactory.createDate(2006, 03, 27));
+			factory.createDateRange(DateFactory.createDate(2006, 3, 28),
+					DateFactory.createDate(2006, 3, 27));
 		} catch (IllegalArgumentException e) {
 			// Okay.
 		}
@@ -75,162 +76,162 @@ public class DateRangeTest {
 	 * Tests the inclusion of a date in a date range.
 	 */
 	@Test
-	public void testIncludes1() {
-		DateRange dr = factory.createDateRange(DateFactory.createDate(2006, 03,
-				10), DateFactory.createDate(2006, 03, 20));
-		assertTrue(dr.includes(DateFactory.createDate(2006, 03, 10)));
-		assertTrue(dr.includes(DateFactory.createDate(2006, 03, 15)));
-		assertTrue(dr.includes(DateFactory.createDate(2006, 03, 20)));
-		assertFalse(dr.includes(DateFactory.createDate(2006, 03, 9)));
-		assertFalse(dr.includes(DateFactory.createDate(2006, 03, 1)));
-		assertFalse(dr.includes(DateFactory.createDate(2006, 03, 21)));
-		assertFalse(dr.includes(DateFactory.createDate(2006, 03, 30)));
+	void testIncludes1() {
+		DateRange dr = factory.createDateRange(DateFactory.createDate(2006, 3,
+				10), DateFactory.createDate(2006, 3, 20));
+		assertTrue(dr.includes(DateFactory.createDate(2006, 3, 10)));
+		assertTrue(dr.includes(DateFactory.createDate(2006, 3, 15)));
+		assertTrue(dr.includes(DateFactory.createDate(2006, 3, 20)));
+		assertFalse(dr.includes(DateFactory.createDate(2006, 3, 9)));
+		assertFalse(dr.includes(DateFactory.createDate(2006, 3, 1)));
+		assertFalse(dr.includes(DateFactory.createDate(2006, 3, 21)));
+		assertFalse(dr.includes(DateFactory.createDate(2006, 3, 30)));
 	}
 
 	/**
 	 * Tests the inclusion of a date range in a date range.
 	 */
 	@Test
-	public void testIncludes2() {
-		DateRange dr = factory.createDateRange(DateFactory.createDate(2006, 03,
-				10), DateFactory.createDate(2006, 03, 20));
+	void testIncludes2() {
+		DateRange dr = factory.createDateRange(DateFactory.createDate(2006, 3,
+				10), DateFactory.createDate(2006, 3, 20));
 		assertTrue(dr.includes(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 10), DateFactory.createDate(2006, 03, 20))));
+				2006, 3, 10), DateFactory.createDate(2006, 3, 20))));
 		assertTrue(dr.includes(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 11), DateFactory.createDate(2006, 03, 19))));
+				2006, 3, 11), DateFactory.createDate(2006, 3, 19))));
 		assertFalse(dr.includes(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 9), DateFactory.createDate(2006, 03, 19))));
+				2006, 3, 9), DateFactory.createDate(2006, 3, 19))));
 		assertFalse(dr.includes(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 3), DateFactory.createDate(2006, 03, 9))));
+				2006, 3, 3), DateFactory.createDate(2006, 3, 9))));
 		assertFalse(dr.includes(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 21), DateFactory.createDate(2006, 03, 30))));
+				2006, 3, 21), DateFactory.createDate(2006, 3, 30))));
 	}
 
 	/**
 	 * Tests the overlapping of a date range with another date range.
 	 */
 	@Test
-	public void testOverlap() {
-		DateRange dr = factory.createDateRange(DateFactory.createDate(2006, 03,
-				10), DateFactory.createDate(2006, 03, 20));
+	void testOverlap() {
+		DateRange dr = factory.createDateRange(DateFactory.createDate(2006, 3,
+				10), DateFactory.createDate(2006, 3, 20));
 		assertTrue(dr.overlaps(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 12), DateFactory.createDate(2006, 03, 28))));
+				2006, 3, 12), DateFactory.createDate(2006, 3, 28))));
 		assertTrue(dr.overlaps(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 10), DateFactory.createDate(2006, 03, 20))));
+				2006, 3, 10), DateFactory.createDate(2006, 3, 20))));
 		assertTrue(dr.overlaps(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 8), DateFactory.createDate(2006, 03, 16))));
+				2006, 3, 8), DateFactory.createDate(2006, 3, 16))));
 		assertTrue(dr.overlaps(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 18), DateFactory.createDate(2006, 03, 22))));
+				2006, 3, 18), DateFactory.createDate(2006, 3, 22))));
 		assertTrue(dr.overlaps(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 8), DateFactory.createDate(2006, 03, 22))));
+				2006, 3, 8), DateFactory.createDate(2006, 3, 22))));
 		assertFalse(dr.overlaps(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 2), DateFactory.createDate(2006, 03, 9))));
+				2006, 3, 2), DateFactory.createDate(2006, 3, 9))));
 		assertFalse(dr.overlaps(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 22), DateFactory.createDate(2006, 03, 29))));
+				2006, 3, 22), DateFactory.createDate(2006, 3, 29))));
 	}
 
 	/**
 	 * Tests equality and hash code.
 	 */
 	@Test
-	public void testEqualsAndHashCode() {
+	void testEqualsAndHashCode() {
 		DateRange dr1 = factory.createDateRange(DateFactory.createDate(2006,
-				03, 10), DateFactory.createDate(2006, 03, 20));
-		assertFalse(dr1.equals(null));
-		assertFalse(dr1.equals(new Object()));
-		assertTrue(dr1.equals(dr1));
-		assertTrue(dr1.equals(factory.createDateRange(DateFactory.createDate(
-				2006, 03, 10), DateFactory.createDate(2006, 03, 20))));
-		assertTrue(factory.createDateRange(
-				DateFactory.createDate(2006, 03, 10),
-				DateFactory.createDate(2006, 03, 20)).equals(dr1));
-		assertTrue(dr1.hashCode() == factory.createDateRange(
-				DateFactory.createDate(2006, 03, 10),
-				DateFactory.createDate(2006, 03, 20)).hashCode());
+				3, 10), DateFactory.createDate(2006, 3, 20));
+		assertNotEquals(null, dr1);
+		assertNotEquals(dr1, new Object());
+		assertEquals(dr1, dr1);
+		assertEquals(dr1, factory.createDateRange(DateFactory.createDate(
+				2006, 3, 10), DateFactory.createDate(2006, 3, 20)));
+		assertEquals(factory.createDateRange(
+				DateFactory.createDate(2006, 3, 10),
+				DateFactory.createDate(2006, 3, 20)), dr1);
+		assertEquals(dr1.hashCode(), factory.createDateRange(
+				DateFactory.createDate(2006, 3, 10),
+				DateFactory.createDate(2006, 3, 20)).hashCode());
 	}
 
 	@Test
-	public void testIsEmpty() {
+	void testIsEmpty() {
 		DateRange dr1 = factory.createDateRange(DateFactory.createDate(2006,
-				03, 10), DateFactory.createDate(2006, 03, 20));
+				3, 10), DateFactory.createDate(2006, 3, 20));
 		assertFalse(dr1.isEmpty());
 		DateRange dr2 = factory.createDateRange(DateFactory.createDate(2006,
-				03, 20), DateFactory.createDate(2006, 03, 20));
+				3, 20), DateFactory.createDate(2006, 3, 20));
 		assertTrue(dr2.isEmpty());
 		DateRange dr3 = factory.createDateRange(DateFactory.createDate(2006,
-				03, 30), DateFactory.createDate(2006, 03, 20));
+				3, 30), DateFactory.createDate(2006, 3, 20));
 		assertTrue(dr3.isEmpty());
 	}
 
 	@Test
-	public void testCompareTo1() {
+	void testCompareTo1() {
 		DateRange dr1 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 10), DateFactory.createDate(2006, 04, 20));
+				4, 10), DateFactory.createDate(2006, 4, 20));
 		DateRange dr2 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 11), DateFactory.createDate(2006, 04, 20));
+				4, 11), DateFactory.createDate(2006, 4, 20));
 		assertTrue(dr1.compareTo(dr2) < 0);
 	}
 
 	@Test
-	public void testCompareTo2() {
+	void testCompareTo2() {
 		DateRange dr1 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 11), DateFactory.createDate(2006, 04, 20));
+				4, 11), DateFactory.createDate(2006, 4, 20));
 		DateRange dr2 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 11), DateFactory.createDate(2006, 04, 20));
-		assertTrue(dr1.compareTo(dr2) == 0);
+				4, 11), DateFactory.createDate(2006, 4, 20));
+		assertEquals(0, dr1.compareTo(dr2));
 	}
 
 	@Test
-	public void testCompareTo21() {
+	void testCompareTo21() {
 		DateRange dr1 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 11), DateFactory.createDate(2006, 04, 19));
+				4, 11), DateFactory.createDate(2006, 4, 19));
 		DateRange dr2 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 11), DateFactory.createDate(2006, 04, 20));
+				4, 11), DateFactory.createDate(2006, 4, 20));
 		assertTrue(dr1.compareTo(dr2) < 0);
 	}
 
 	@Test
-	public void testCompareTo22() {
+	void testCompareTo22() {
 		DateRange dr1 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 11), DateFactory.createDate(2006, 04, 21));
+				4, 11), DateFactory.createDate(2006, 4, 21));
 		DateRange dr2 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 11), DateFactory.createDate(2006, 04, 20));
+				4, 11), DateFactory.createDate(2006, 4, 20));
 		assertTrue(dr1.compareTo(dr2) > 0);
 	}
 
 	@Test
-	public void testCompareTo3() {
+	void testCompareTo3() {
 		DateRange dr1 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 12), DateFactory.createDate(2006, 04, 20));
+				4, 12), DateFactory.createDate(2006, 4, 20));
 		DateRange dr2 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 11), DateFactory.createDate(2006, 04, 20));
+				4, 11), DateFactory.createDate(2006, 4, 20));
 		assertTrue(dr1.compareTo(dr2) > 0);
 	}
 
 	@Test
-	public void testToString11() {
+	void testToString11() {
 		DateRange dr1 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 12), DateFactory.createDate(2006, 04, 12));
+				4, 12), DateFactory.createDate(2006, 4, 12));
 		assertEquals(DateRange.EMPTY, dr1.toString());
 	}
 
 	@Test
-	public void testToString12() {
+	void testToString12() {
 		DateRange dr1 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 12), DateFactory.createDate(2006, 04, 10));
+				4, 12), DateFactory.createDate(2006, 4, 10));
 		assertEquals(DateRange.EMPTY, dr1.toString());
 	}
 
 	@Test
-	public void testToString2() {
+	void testToString2() {
 		DateRange dr1 = factory.createDateRange(DateFactory.createDate(2006,
-				04, 10), DateFactory.createDate(2006, 04, 20));
+				4, 10), DateFactory.createDate(2006, 4, 20));
 		assertEquals(DateFactory.toString(dr1.getStart()) + " - "
 				+ DateFactory.toString(dr1.getFinish()), dr1.toString());
 	}
 
 	@Test
-	public void testStartsBefore1() {
+	void testStartsBefore1() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.INFINITY;
 		Date ds2 = DateFactory.getTomorrow();
@@ -241,7 +242,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testStartsBefore2() {
+	void testStartsBefore2() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.INFINITY;
 		Date ds2 = DateFactory.getToday();
@@ -252,7 +253,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testStartsBefore3() {
+	void testStartsBefore3() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.INFINITY;
 		Date ds2 = DateFactory.getYesterday();
@@ -263,7 +264,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testStartsAfter1() {
+	void testStartsAfter1() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.INFINITY;
 		Date ds2 = DateFactory.getTomorrow();
@@ -274,7 +275,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testStartsAfter2() {
+	void testStartsAfter2() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.INFINITY;
 		Date ds2 = DateFactory.getToday();
@@ -285,7 +286,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testStartsAfter3() {
+	void testStartsAfter3() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.INFINITY;
 		Date ds2 = DateFactory.getYesterday();
@@ -296,7 +297,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testEndsBefore1() {
+	void testEndsBefore1() {
 		Date ds1 = DateFactory.EPOCH;
 		Date de1 = DateFactory.getToday();
 		Date ds2 = DateFactory.EPOCH;
@@ -307,7 +308,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testEndsBefore2() {
+	void testEndsBefore2() {
 		Date ds1 = DateFactory.EPOCH;
 		Date de1 = DateFactory.getToday();
 		Date ds2 = DateFactory.EPOCH;
@@ -318,7 +319,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testEndsBefore3() {
+	void testEndsBefore3() {
 		Date ds1 = DateFactory.EPOCH;
 		Date de1 = DateFactory.getTomorrow();
 		Date ds2 = DateFactory.EPOCH;
@@ -329,7 +330,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testEndsAfter1() {
+	void testEndsAfter1() {
 		Date ds1 = DateFactory.EPOCH;
 		Date de1 = DateFactory.getTomorrow();
 		Date ds2 = DateFactory.EPOCH;
@@ -340,7 +341,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testEndsAfter2() {
+	void testEndsAfter2() {
 		Date ds1 = DateFactory.EPOCH;
 		Date de1 = DateFactory.getToday();
 		Date ds2 = DateFactory.EPOCH;
@@ -351,7 +352,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testEndsAfter3() {
+	void testEndsAfter3() {
 		Date ds1 = DateFactory.EPOCH;
 		Date de1 = DateFactory.getToday();
 		Date ds2 = DateFactory.EPOCH;
@@ -362,7 +363,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testStrictlyIncludes1() {
+	void testStrictlyIncludes1() {
 		Date ds1 = DateFactory.EPOCH;
 		Date de1 = DateFactory.INFINITY;
 		Date ds2 = DateFactory.getToday();
@@ -373,7 +374,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testStrictlyIncludes2() {
+	void testStrictlyIncludes2() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.addDays(DateFactory.getToday(), 3);
 		Date ds2 = DateFactory.getTomorrow();
@@ -384,7 +385,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testStrictlyIncludes3() {
+	void testStrictlyIncludes3() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.addDays(DateFactory.getToday(), 3);
 		Date ds2 = DateFactory.getToday();
@@ -395,7 +396,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testStrictlyIncludes4() {
+	void testStrictlyIncludes4() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.addDays(DateFactory.getToday(), 3);
 		Date ds2 = DateFactory.getTomorrow();
@@ -406,7 +407,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testExactlyMatches1() {
+	void testExactlyMatches1() {
 		Date ds1 = DateFactory.EPOCH;
 		Date de1 = DateFactory.INFINITY;
 		Date ds2 = DateFactory.EPOCH;
@@ -417,7 +418,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testExactlyMatches2() {
+	void testExactlyMatches2() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.getTomorrow();
 		Date ds2 = DateFactory.getToday();
@@ -428,7 +429,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testExactlyMatches3() {
+	void testExactlyMatches3() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.getToday();
 		Date ds2 = DateFactory.getToday();
@@ -439,7 +440,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testExactlyMatches4() {
+	void testExactlyMatches4() {
 		Date ds1 = DateFactory.EPOCH;
 		Date de1 = DateFactory.INFINITY;
 		Date ds2 = DateFactory.EPOCH;
@@ -450,7 +451,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testExactlyMatches5() {
+	void testExactlyMatches5() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.getTomorrow();
 		Date ds2 = DateFactory.getTomorrow();
@@ -461,7 +462,7 @@ public class DateRangeTest {
 	}
 
 	@Test
-	public void testExactlyMatches6() {
+	void testExactlyMatches6() {
 		Date ds1 = DateFactory.getToday();
 		Date de1 = DateFactory.getTomorrow();
 		Date ds2 = DateFactory.getToday();
